argo/argocd/projects/homelab/argocd/dashboard/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-dashboard-basicauth
  namespace: traefik
spec:
  basicAuth:
    secret: argocd-dashboard-auth
