argo/argocd/projects/homelab/argocd/dashboard/ingressroutes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`argocd.pleejr.org`)
    kind: Rule
    middlewares:
    - name: argocd-dashboard-basicauth
    services:
    - name: argocd-server
      port: 443
  - match: Host(`argocd.pleejr.org`) && Header(`Content-Type`, `application/grpc`)
    kind: Rule
    middlewares:
    - name: argocd-dashboard-basicauth
    services:
    - name: argocd-server
      port: 443
      scheme: h2c
  tls:
    secretName: argocd-cert-secret-production
